# Universal-Search

./: .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo_pipeline.py  docker-compose.yml  drive_client.py  example_usage.py  kafka_config.py  kafka_producer.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  test_drive_client.py  test_kafka_producer.py
config/: .env.example
schemas/: drive_file.avsc  file_chunk.avsc  parsed_file.avsc
scripts/: run_tests.py
src/: __init__.py
src/universal_search/: __init__.py
src/universal_search/chunkers/: __init__.py  text_chunker.py
src/universal_search/clients/: __init__.py  drive_client.py
src/universal_search/config/: flink_config.py  kafka_config.py  schema_registry_config.py  storage_config.py
src/universal_search/flink_jobs/: __init__.py  chunker_job.py  parser_job.py
src/universal_search/jobs/: __init__.py  drive_streaming_job.py
src/universal_search/parsers/: __init__.py  pdf_parser.py
src/universal_search/producers/: kafka_producer.py
src/universal_search/storage/: storage_adapter.py
tests/: __init__.py  test_drive_client.py  test_kafka_producer.py  test_pdf_parser.py  test_storage_adapter.py  test_streaming_job.py  test_text_chunker.py
